# SPDX-FileCopyrightText: 2025 ProFACE developers
#
# SPDX-License-Identifier: MIT

[project]
name = "proface-vtk-post"
version = "0.1.0b2"
description = "ProFACE to VTK postprocessor"
readme = "README.md"
authors = [
    { name = "Stefano Miccoli", email = "stefano.miccoli@polimi.it" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "meshio>=5.3.5",
    "numpy>=2.3.4",
    "tyro>=0.9.35",
]
license = "MIT"

[project.scripts]
proface-vtu = "proface.vtk.postprocessor.cli:main"


[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

#
# uv
#
[tool.uv.build-backend]
module-name = "proface.vtk.postprocessor"
module-root = "src"

#
# ruff
#
[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["A", "ANN", "E", "EM", "F", "I", "NPY", "RUF", "S", "SIM", "TRY", "T10", "UP"]
ignore = ["S101"]

#
# mypy
#
[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
